Replace Arrow usage with my custom impl (straight arrays)